--- a/style.css
+++ b/style.css
@@ -38,12 +38,12 @@ html{
 .line{
     width: 100%;
     height: 0.2rem;
-    background-color:white;
+    background-color:#c29525;
     box-shadow: 0 0.1rem 0.2rem rgba(0, 0, 0, 0.2);
 }
 
 .change .line {
-    background: rgba(0,0,0,0.8);
+    background: #c29525;
 }
 
 .change .line-1 {
@@ -175,7 +175,7 @@ html{
 .history {
     width: 100%;
     background-color: #f5f5f5;
-    padding-bottom: 15rem;
+    padding-bottom: 5rem;
 }
 
 .section-header {
@@ -208,22 +208,54 @@ html{
     padding: 0 10rem 10rem 10rem;
 }
 
-.origins-title {
+.section-part-title {
     font-size: 4rem;
     font-weight: 300;
     color: #4b4b4b;
     margin-bottom: 6rem;
+    margin-top: 5rem;
 }
 
 .intro {
     margin-bottom: 6rem;
 }
 
-.galery {
-    display: flex;
+.galery2::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
 .galery-image {
-    flex: 33.33%;
+    float: left;
+    width: 50%;
+    padding: 2rem;
+}
+
+.rules {
+    width: 100%;
+    background-color: #f5f5f5;
+    padding-bottom: 15rem;
+}
+
+.rules-column {
+    float: left;
+    width: 50%;
     padding: 1rem;
+    margin-bottom: 5rem;
+}
+
+.rules-column li {
+    margin-bottom: 3rem;
+}
+
+.rules-list::after{
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.rules-image{
+    float: center;
+    padding: 2rem;
 }
