--- a/style.css
+++ b/style.css
@@ -212,8 +212,8 @@ html{
     font-size: 4rem;
     font-weight: 300;
     color: #4b4b4b;
-    margin-bottom: 6rem;
-    margin-top: 5rem;
+    margin-bottom: 8rem;
+    margin-top: 7rem;
 }
 
 .intro {
@@ -258,4 +258,62 @@ html{
 .rules-image{
     float: center;
     padding: 2rem;
+}
+
+.fun-facts {
+    width: 100%;
+    background-color: #f5f5f5;
+    padding-bottom: 15rem;
+}
+
+.footer {
+    width: 100%;
+    height: 15rem;
+    background-color: #17181b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .footer-content {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .copyright {
+    font-family: 'Mulish',serif;
+    font-size: 1.6rem;
+    color: #a7a7a7;
+  }
+
+  .scroll-btn {
+    position: fixed;
+    right: 5rem;
+    bottom: 5rem;
+    width: 4.5rem;
+    height: 4.5rem;
+    background-color: #e2b646;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    color: #fff;
+    box-shadow: 0 0.1rem 0.6rem rgba(0, 0, 0, 0.2);
+    border-radius: 0.3rem;
+  }
+
+  .footer-menu-link {
+    font-family: 'Fira Sans',sans-serif;
+    font-size: 2rem;
+    color:darkgrey;
+    position: relative;
+    padding: 3rem;
+}
+
+@media (max-width: 1500px) {
+    .galery-image {
+        width: 100%;
+        padding: 2rem;
+    }
 }
